harbor/harbor-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
---
apiVersion: v1
kind: Service
metadata:
  name: harbor
  namespace: harbor
spec:
  type: ExternalName
  externalName: harbor.domain.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: "org-ca-issuer"
    cert-manager.io/common-name: "Harbor"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "false"
    nginx.ingress.kubernetes.io/server-snippet: |
      ssl_session_timeout 1d;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - harbor.domain.com
      secretName: harbor-tls
  rules:
  - host: harbor.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 8080
